--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "@tanstack/react-query": "^4.2.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
