fixed layout and added posters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.js"
-, "src/pages/_app.jsx"  ],
+, "src/pages/_app.jsx", "src/components/searchbar.jsx", "src/components/navbar.jsx"  ],
   "exclude": ["node_modules"]
 }
